# Core

./: .travis.yml  AsyncTask.cpp  CMakeLists.txt  Deleter.h  Enviorment.cpp  INSTALL.bat  INSTALL.sh  Logger.h  Pipe.h  Process.h  README.md  TraceListener.cpp  appveyor.yml
cmake/: FindGoogleTest.cmake  FindHIRedis.cmake  FindSpdLog.cmake  InstallGoogleTest.cmake  InstallHiRedis.cmake  installThirdParty.cmake
example/: CMakeLists.txt  example.cpp
src/: Allocator.cpp  Allocator.h  Assert.h  AsyncExecutor.cpp  AsyncExecutor.h  AsyncTask.cpp  AsyncTask.h  AutoResetEvent.cpp  AutoResetEvent.h  ChildProcess.cpp  ChildProcess.h  CommandLine.cpp  CommandLine.h  ConcurrentDictionary.h  Condition.cpp  Condition.h  DefaultLogger.cpp  DefaultLogger.h  DefaultTraceListeners.cpp  DefaultTraceListeners.h  Directory.cpp  Directory.h  Enumeration.h  EnumsAll.h  Enviorment.cpp  Enviorment.h  Environment.cpp  Environment.h  Exception.h  Export.h  Future.h  GeneralParams.h  LogElement.h  Logger.cpp  Logger.h  LoggerImpl.h  Mutex.cpp  Mutex.h  NoExcept.h  OrderedList.h  (+25 more)
src/Process/Detail/: PipeBuffer.h
src/Process/Detail/Posix/: Pipe.h
tests/: CMakeLists.txt  Tests.cpp
